After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739258 - [PATCH] wifi: Empty AP BSSID is NULL, not an invalid address
[PATCH] wifi: Empty AP BSSID is NULL, not an invalid address
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-27 18:56 UTC by Lubomir Rintel
Modified: 2014-12-01 11:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] wifi: Empty AP BSSID is NULL, not an invalid address (1.20 KB, patch)
2014-10-27 18:56 UTC, Lubomir Rintel
none Details | Review

Description Lubomir Rintel 2014-10-27 18:56:19 UTC
Created attachment 289477 [details] [review]
[PATCH] wifi: Empty AP BSSID is NULL, not an invalid address

Since 3a54d050 the AP address is not a gbyte[], but a char *. The fake AP BSSID
fixup could trigger an assertion failure:

Oct 26 11:14:45 goatlord.localdomain NetworkManager[540]: nm_ethernet_address_is_valid: assertion 'addr != NULL' failed

Fixes: 3a54d050985d6ef2067b025571910a8ccd3cbd57
Comment 1 Thomas Haller 2014-10-27 19:36:37 UTC
(In reply to comment #0)
> Created an attachment (id=289477) [details] [review]
> [PATCH] wifi: Empty AP BSSID is NULL, not an invalid address
> 
> Since 3a54d050 the AP address is not a gbyte[], but a char *. The fake AP BSSID
> fixup could trigger an assertion failure:
> 
> Oct 26 11:14:45 goatlord.localdomain NetworkManager[540]:
> nm_ethernet_address_is_valid: assertion 'addr != NULL' failed


goatlord. LOL

Your change looks good.


May I hijack this bug and push a branch?
th/bgo739258_wifi_bssid_fixes

It also includes your patch from attachment 289477 [details] [review] .
Comment 2 Lubomir Rintel 2014-10-27 21:45:51 UTC
(In reply to comment #1)
> May I hijack this bug and push a branch?
> th/bgo739258_wifi_bssid_fixes

Please do. The other commits LGTM.
Comment 3 Dan Williams 2014-10-28 19:02:09 UTC
Branch looks good to me.
Comment 4 Lubomir Rintel 2014-11-15 14:12:00 UTC
Fixed in master.